<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">orient-me</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="submit_text">Submit</string>
    <string name="main_menu">Main Menu</string>
    <string name="welcome">Welcome</string>
    <string name="action_doc">Docs</string>
    <string name="action_sMedia">Friends</string>
    <string name="action_import_long">Import Contacts</string>
    <string name="action_badges">Badges</string>
    <string name="action_import_short">Import</string>
    <string name="student_handbook">Student Handbook</string>
    <string name="module_list">Module List</string>
    <string name="orientation_schedule">Orientation Schedule</string>
    <string name="campus_map">Campus Map</string>
    <string name="my_notes">My Notes</string>
    <string name="doc_instruction">Select a Document to View</string>
    <string name="title_activity_splash_login">SplashLoginActivity</string>
    <string name="activity_splash_login_message">One moment please. \n Self-programming on start-up&#8230;</string>
    <string name="activity_splash_desc">Displaying APU\'s Logo</string>
    <string name="title_activity_view_notes_list">ViewNotesListActivity</string>
    <string name="title_activity_add_note">AddNoteActivity</string>
    <string name="New">New</string>
    <string name="Save">Save</string>
    <string name="title_activity_view_note">ViewNoteActivity</string>
    <string name="Discard">Discard</string>
    <string name="Edit">Edit</string>
    <string name="Title">Title</string>
    <string name="ana_instructions">Type your notes here</string>
    <string name="title_activity_view_schedule_list">ViewScheduleListActivity</string>
    <string name="action_schedule">Schedules</string>
    <string name="title_activity_add_schedule">AddScheduleActivity</string>
    <string name="Location">Location</string>
    <string name="Notes">Notes</string>
    <string name="Alert">Alert?</string>
    <string name="Start">Start</string>
    <string name="Starts_at">Starts at:</string>
    <string name="Ends_at">Ends at:</string>
    <string name="End">End</string>
    <string name="title_activity_view_schedule">ViewScheduleActivity</string>
    <string name="title_activity_edit_schedule">EditScheduleActivity</string>
    <string name="title_activity_view_contacts_list">ViewContactsListActivity</string>
    <string name="title_activity_facebook">FacebookActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_view_badges_list">ViewBadgesListActivity</string>
    <string name="AchievementUnlocked">Achievement Unlocked!</string>
	<string name="title_activity_main">APU Orient Me</string>
	<string name="Add_Schedule">Add Schedule</string>
	<string name="Add_Note">Add Note</string>
	
    <color name="darkblue">#01579B</color>
    <color name="middleblue">#03A9F4</color>
    <color name="lightblue">#B3E5FC</color>
    <color name="accentyellow">#FFB300</color>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
</resources>
