<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.orient_me.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mi_doc"
        android:checked="true"
        android:enabled="true"
        android:title="@string/action_doc"
        android:visible="true">
    </item>

    <group
        android:id="@+id/mg_notChecked"
        android:checkableBehavior="single"
        android:enabled="true"
        android:orderInCategory="2"
        android:visible="true" >
        <item
            android:id="@+id/mi_badges"
            android:title="@string/action_badges">
        </item>
        <item
            android:id="@+id/mi_import"
            android:title="@string/action_import_long"
            android:titleCondensed="@string/action_import_short">
        </item>
        <item
            android:id="@+id/mi_sMedia"
            android:title="@string/action_sMedia">
        </item>
        <item
            android:id="@+id/mi_schedule"
            android:title="@string/action_schedule">
        </item>
    </group>

</menu>