<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    style="@style/mainOuterLayout" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:padding="10dp" >

        <TextView
            android:id="@+id/daT_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doc_instruction"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <Button
            android:id="@+id/daB_studentHandbook"
            style="@style/defaultbutton"
            android:text="@string/student_handbook" />

        <Button
            android:id="@+id/daB_moduleList"
            style="@style/defaultbutton"
            android:text="@string/module_list" />

        <Button
            android:id="@+id/daB_orientSchedule"
            style="@style/defaultbutton"
            android:text="@string/orientation_schedule" />

        <Button
            android:id="@+id/daB_campusMap"
			style="@style/defaultbutton"
            android:text="@string/campus_map" />

        <Button
            android:id="@+id/daB_myNotes"
            style="@style/defaultbutton"
            android:text="@string/my_notes" />

    </LinearLayout>

</LinearLayout>
