<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar" />

    <LinearLayout
        style="@style/mainOuterLayout"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/asaTB_title"
            style="@style/defaultEditText"
            android:hint="@string/Title" >
        </EditText>

        <LinearLayout
            style="@style/innerLayout" >

            <TextView
                android:id="@+id/asaT_startTime"
                style="@style/instructTextView"
                android:layout_width="wrap_content"
                android:text="@string/Start"
                android:weightSum="1" />

            <TextView
                android:id="@+id/asaTV_startDate"
                style="@style/datetimeTextView"
                android:gravity="end"  
                android:paddingRight="10dp" />

            <TextView
                android:id="@+id/asaTV_startTime"
                style="@style/datetimeTextView"
                android:gravity="start" />
        </LinearLayout>

        <LinearLayout
            style="@style/innerLayout" >

            <TextView
                android:id="@+id/asaT_endTime"
                style="@style/instructTextView"
                android:layout_width="wrap_content"
                android:text="@string/End" />
            <TextView
                android:id="@+id/asaTV_endDate"
                style="@style/datetimeTextView"
                android:layout_marginRight="10dp"
                android:gravity="end" />

            <TextView
                android:id="@+id/asaTV_endTime"
                style="@style/datetimeTextView"
                android:gravity="start" />
        </LinearLayout>

        <EditText
            android:id="@+id/asaTB_location"
            style="@style/defaultEditText"
            android:hint="@string/Location" />

        <LinearLayout
            style="@style/innerLayout"  >

            <TextView
                android:id="@+id/asaTV_alert"
                style="@style/instructTextView"
                android:layout_width="wrap_content"
                android:text="@string/Alert"
                android:layout_weight="1" 
                android:gravity="left"/>

            <Switch
                android:id="@+id/asaSw_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:onClick="onSwitchClicked" />
        </LinearLayout>

        <EditText
            android:id="@+id/asaTA_notes"
            style="@style/defaultEditText"
            android:layout_height="fill_parent"
            android:gravity="top|start"
            android:hint="@string/Notes"
            android:inputType="textMultiLine" />
    </LinearLayout>

</LinearLayout>