<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar" />

    <LinearLayout
        style="@style/mainOuterLayout"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/laTF_Username"
            style="@style/defaultEditText"
            android:hint="@string/username_text"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/laTF_Password"
            style="@style/defaultEditText"
            android:hint="@string/password_text"
            android:inputType="textPassword" >
        </EditText>

        <Button
            android:id="@+id/laB_Submit"
			android:onClick="login"
            android:text="@string/submit_text"
            style="@style/defaultbutton" />
    </LinearLayout>

</LinearLayout>