<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar" />

    <LinearLayout
        style="@style/mainOuterLayout"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/vsaTV_title_loc"
            style="@style/instructTextView"
            android:layout_marginBottom="10dp"
            android:textSize="20sp" />

        <LinearLayout style="@style/innerLayout" >

            <TextView
                android:id="@+id/vsaTV_startText"
                style="@style/defaultTextView"
                android:ems="5"
                android:text="@string/Starts_at" />

            <TextView
                android:id="@+id/vsaTV_startsAt"
                style="@style/defaultTextView"
                android:layout_weight="1"
                android:gravity="right" />
        </LinearLayout>

        <LinearLayout style="@style/innerLayout" >

            <TextView
                android:id="@+id/vsaTV_endText"
                style="@style/defaultTextView"
                android:ems="5"
                android:text="@string/Ends_at" />

            <TextView
                android:id="@+id/vsaTV_endsAt"
                style="@style/defaultTextView"
                android:layout_weight="1"
                android:gravity="right" />
        </LinearLayout>

        <LinearLayout style="@style/innerLayout" >

            <TextView
                android:id="@+id/vsaTV_alertText"
                style="@style/defaultTextView"
                android:ems="5"
                android:text="@string/Alert" />

            <TextView
                android:id="@+id/vsaTV_alertSetting"
                style="@style/defaultTextView"
                android:layout_weight="1"
                android:gravity="right" />
        </LinearLayout>

        <LinearLayout
            style="@style/innerLayout"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/vsaTV_noteText"
                style="@style/defaultTextView"
                android:ems="5"
                android:text="@string/Notes" />

            <TextView
                android:id="@+id/vsaTV_noteContent"
                style="@style/defaultTextView" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>