<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="2" >

        <TextView
            android:id="@+id/maT_Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:weightSum="1" />

        <EditText
            android:id="@+id/maTF_Username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:weightSum="1" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <TextView
            android:id="@+id/maT_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:weightSum="1" />

        <EditText
            android:id="@+id/maTF_Password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:weightSum="1" >
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/maB_Submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_text" />

</LinearLayout>